--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,59 @@
     "tao-extension-name": "taoQtiTestPreviewer"
   },
   "minimum-stability": "dev",
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/oatbox-extension-installer.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/generis.git"
+		},                        
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/tao-core.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-item.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-outcomeui.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-outcomeui.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-itemqti.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-testqti.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-delivery.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-outcome.git"
+		}                            
+	],		        
   "require": {
-    "oat-sa/oatbox-extension-installer": "~1.1||dev-master",
-    "oat-sa/generis" : ">=14.0.0",
-    "oat-sa/tao-core" : ">=47.0.0",
-    "oat-sa/extension-tao-item" : ">=11.11.2",
-    "oat-sa/extension-tao-outcomeui" : ">=10.0.0",
-    "oat-sa/extension-tao-itemqti" : ">=28.22.0",
-    "oat-sa/extension-tao-testqti" : ">=41.22.2",
-    "oat-sa/extension-tao-test" : ">=15.0.0",
-    "oat-sa/extension-tao-delivery" : ">=15.0.0",
-    "oat-sa/extension-tao-outcome" : ">=13.0.0",
+    "openthinklabs/oatbox-extension-installer": "~1.1||dev-master",
+    "openthinklabs/generis" : ">=14.0.0",
+    "openthinklabs/tao-core" : ">=47.0.0",
+    "openthinklabs/extension-tao-item" : ">=11.11.2",
+    "openthinklabs/extension-tao-outcomeui" : ">=10.0.0",
+    "openthinklabs/extension-tao-itemqti" : ">=28.22.0",
+    "openthinklabs/extension-tao-testqti" : ">=41.22.2",
+    "openthinklabs/extension-tao-test" : ">=15.0.0",
+    "openthinklabs/extension-tao-delivery" : ">=15.0.0",
+    "openthinklabs/extension-tao-outcome" : ">=13.0.0",
     "qtism/qtism": "~0"
   },
   "autoload": {
