--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,24 @@
 		},
 		{
 			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-delivery-rdf.git"
+		},		
+		{
+			"type": "vcs",
 			"url": "git@github.com:openthinklabs/extension-tao-outcome.git"
 		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-backoffice.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-testtaker.git"
+		},				
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/extension-tao-group.git"
+		},						
 		{
 			"type": "vcs",
 			"url": "git@github.com:openthinklabs/qti-sdk.git"
@@ -90,24 +106,42 @@
 		{
 			"type": "vcs",
 			"url": "git@github.com:openthinklabs/lib-beeme.git"
-		}
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/lib-tao-qti.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/lib-tao-dtms.git"
+		},
+		{
+			"type": "vcs",
+			"url": "git@github.com:openthinklabs/lib-test-cat.git"
+		}								
 	],		      
   "require": {
     "openthinklabs/oatbox-extension-installer": "1.2.2",
-    "openthinklabs/generis" : "15.11.0.4",
-    "openthinklabs/tao-core" : "48.66.1.3",
-    "openthinklabs/extension-tao-item" : "11.21.0.4",
-    "openthinklabs/extension-tao-outcomeui" : "11.0.3.2",
-    "openthinklabs/extension-tao-itemqti" : "28.28.1.1",
-    "openthinklabs/extension-tao-testqti" : "42.0.1.1",
-    "openthinklabs/extension-tao-test" : "15.10.2.3",
-    "openthinklabs/extension-tao-delivery" : "15.8.1.4",
-    "openthinklabs/extension-tao-outcome" : "13.1.0.4",
+    "openthinklabs/generis" : "~15.11.0.4",
+    "openthinklabs/tao-core" : "~48.66.1.4",
+    "openthinklabs/extension-tao-item" : "~11.21.0.5",
+    "openthinklabs/extension-tao-outcomeui" : "~11.0.3.3",
+    "openthinklabs/extension-tao-itemqti" : "~28.28.1.2",
+    "openthinklabs/extension-tao-testqti" : "~42.0.1.1",
+    "openthinklabs/extension-tao-test" : "~15.10.2.4",
+    "openthinklabs/extension-tao-delivery" : "~15.8.1.5",
+    "openthinklabs/extension-tao-outcome" : "~13.1.0.5",
     "openthinklabs/qtism": "0.25.1.3"
   },
   "autoload": {
     "psr-4": {
       "oat\\taoQtiTestPreviewer\\": ""
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "openthinklabs/oatbox-extension-installer": true,
+      "openthinklabs/composer-npm-bridge": true
     }
   }
 }
