--- a/composer.json
+++ b/composer.json
@@ -126,12 +126,12 @@
     "openthinklabs/tao-core" : "~48.66.1.4",
     "openthinklabs/extension-tao-item" : "~11.21.0.5",
     "openthinklabs/extension-tao-outcomeui" : "~11.0.3.3",
-    "openthinklabs/extension-tao-itemqti" : "~28.28.1.2",
+    "openthinklabs/extension-tao-itemqti" : "~28.28.1.3",
     "openthinklabs/extension-tao-testqti" : "~42.0.1.1",
     "openthinklabs/extension-tao-test" : "~15.10.2.4",
     "openthinklabs/extension-tao-delivery" : "~15.8.1.5",
     "openthinklabs/extension-tao-outcome" : "~13.1.0.5",
-    "openthinklabs/qtism": "0.25.1.3"
+    "openthinklabs/qtism": "~0.25.0.1"
   },
   "autoload": {
     "psr-4": {
