--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,15 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "oat-sa/oatbox-extension-installer": "~1.1||dev-master",
-    "oat-sa/generis" : ">=15.39.0",
-    "oat-sa/tao-core" : ">=54.23.0",
-    "oat-sa/extension-tao-item" : ">=12.4.0",
-    "oat-sa/extension-tao-itemqti" : ">=30.22.0",
-    "oat-sa/extension-tao-testqti" : ">=48.14.0",
-    "oat-sa/extension-tao-test" : ">=16.3.0",
-    "oat-sa/extension-tao-delivery" : ">=15.0.0",
-    "oat-sa/extension-tao-outcome" : ">=13.0.0",
+    "openthinklabs/oatbox-extension-installer": "dev-master",
+    "openthinklabs/generis" : "dev-master",
+    "openthinklabs/tao-core" : "dev-master",
+    "openthinklabs/extension-tao-item" : "dev-master",
+    "openthinklabs/extension-tao-itemqti" : "dev-master",
+    "openthinklabs/extension-tao-testqti" : "dev-master",
+    "openthinklabs/extension-tao-test" : "dev-master",
+    "openthinklabs/extension-tao-delivery" : "dev-master",
+    "openthinklabs/extension-tao-outcome" : "dev-master",
     "qtism/qtism": "~0"
   },
   "autoload": {
